# vSLAM_lecture_14

./: .gitignore  README.md
chapter_02/: CMakeLists.txt  run.sh
chapter_02/include/: helloSLAM.h
chapter_02/src/: helloSLAM.cpp
chapter_03/: CMakeLists.txt  build.sh  run.sh
chapter_03/plotTraj/: install_pangolin.sh  plotTraj.cpp
chapter_03/useEigen/: eigenMatrix.cpp
chapter_03/useGeometry/: useGeometry.cpp
chapter_04/: CMakeLists.txt  build.sh  install_sophus.sh  run.sh
chapter_04/plotTrajError/: plotTrajError.cpp
chapter_04/useSophus/: useSophus.cpp
chapter_05/: CMakeLists.txt  install_opencv.sh  run.sh
chapter_05/imageBasics/: imageBasics.cpp  imageUndistort.cpp
chapter_05/rgbd/: jointMap.cpp
chapter_05/stereoVision/: stereoVision.cpp
chapter_06/: CMakeLists.txt  install_ceres.sh  install_g2o.sh  run.sh
chapter_06/curveFitting/: gaussNewton.cpp
chapter_06/curveFittingCeres/: ceresCurveFitting.cpp
chapter_06/curveFittingG2O/: g2oCurveFitting.cpp
chapter_07/: CMakeLists.txt  run.sh
chapter_07/orb_opencv/: orbOpenCV.cpp
chapter_07/pose_estimation/: pose_estimation_2d2d.cpp  pose_estimation_3d2d_g2o.cpp
chapter_09/: CMakeLists.txt  build.sh  install_meshlab.sh  run.sh
chapter_09/data_loader/: common.h
chapter_09/src/: BACeres.cpp  BAG2O.cpp  SnavelyReprojectionError.h  common.cpp
chapter_13/: CMakeLists.txt
chapter_13/app/: run_kitti_stereo.cpp
chapter_13/config/: default.yaml
chapter_13/include/myslam/: common_include.hh  visual_odometry.hh
chapter_13/include/myslam/backend/: backend.hh
chapter_13/include/myslam/data_structure/: camera.hh  dataset.hh  feature.hh  frame.hh  map.hh  map_point.hh
chapter_13/include/myslam/frontend/: frontend.hh
chapter_13/include/myslam/utils/: algorithm.hh  config.hh  g2o_types.hh
chapter_13/include/myslam/viewer/: viewer.hh
chapter_13/src/: CMakeLists.txt  visual_odometry.cc
chapter_13/src/backend/: backend.cc
chapter_13/src/data_structure/: camera.cc  dataset.cc  feature.cc  frame.cc  map.cc  map_point.cc
chapter_13/src/frontend/: frontend.cc
chapter_13/src/utils/: config.cc
chapter_13/src/viewer/: viewer.cc
chapter_2/: main.cpp
